If you find the top button doing something it shouldn't, please submit a bug report.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,4 +28,18 @@
         android:text="-"
         android:id="@+id/down_button" />
 
+    <Button
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="What does this do?"
+        android:id="@+id/mystery_button"/>
+    <TextView
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/mystery_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:id="@+id/output_text"/>
+
 </RelativeLayout>
