--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
     <TextView
-        android:text="@string/hello_world"
+        android:text="0"
         android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -14,10 +14,11 @@
 
     <Button
         android:layout_toRightOf="@id/not_button"
+        android:layout_toEndOf="@id/not_button"
         android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="+"
+        android:text="@string/button_increment"
         android:id="@+id/up_button" />
 
     <Button
@@ -25,14 +26,14 @@
         android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="-"
+        android:text="@string/button_decrement"
         android:id="@+id/down_button" />
 
     <Button
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="What does this do?"
+        android:text="@string/default_button_text"
         android:id="@+id/mystery_button"/>
     <TextView
         android:layout_centerHorizontal="true"
@@ -41,5 +42,13 @@
         android:layout_height="wrap_content"
         android:text=""
         android:id="@+id/output_text"/>
+
+    <Button
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/new_activity_button_text"
+        android:id="@+id/new_activity_button"/>
 
 </RelativeLayout>
